<resources>
    <string name="app_name" translatable="false">Party Music</string>
    <string name="input_name">Username</string>
    <string name="input_email" translatable="false">Email</string>
    <string name="input_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Register</string>
    <string name="info_login_failed">E-mail or password incorrect</string>
    <string name="info_login_success">Login success</string>
    <string name="message_no_account">Not registered ? Create an account.</string>
    <string name="message_already_account">Already registered ? Login.</string>
    <string name="title_exit">Exit PartyMusic</string>
    <string name="confirm_exit">Are you sure you want to leave the app ?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="cancel">cancel</string>
    <string name="info_invalid_email">Invalid email address</string>
    <string name="info_short_name">Username must be at least 3 characters long</string>
    <string name="info_confirm_different">Passwords do not match</string>
    <string name="info_password_need_digit">Password must contain at least one number</string>
    <string name="info_password_need_special">Password must contain at least one special character</string>
    <string name="info_password_need_lower">Password must contain at least one lowercase letter</string>
    <string name="info_password_need_8chars">Password must be at least 8 characters long</string>
    <string name="info_password_need_upper">Password must contain at least one uppercase letter</string>
    <string name="info_register_success">Successfully signed up</string>
    <string name="info_register_failed">Signing up failed</string>
    <string name="info_email_used">E-mail already used.</string>
    <string name="info_drawer_oppened">Drawer oppened</string>
    <string name="info_drawer_closed">Drawer closed</string>
    <string name="input_code">Party Code</string>
    <string name="info_logout">Logout</string>
    <string name="button_create_room">Create a Party</string>
    <string name="action_settings">Settings</string>
    <string name="input_label">Party label</string>
    <string name="input_description">Party description</string>
    <string name="error_retry">An error occured, please try again.</string>
    <string name="info_max_room_reached">You have already created 3 Party</string>
    <string name="info_refresh">Refresh</string>
    <string name="info_add_music">Add a music</string>
    <string name="info_like">Like</string>
    <string name="info_link">Open link</string>
    <string name="error_room_not_found">Party not found</string>
    <string name="home">Home</string>
    <string name="error_no_music">No music found for this Party</string>
    <string name="info_proposed">Music added by</string>
    <string name="hint_new_username">New username</string>
    <string name="hint_new_password">New password</string>
    <string name="info_save">Save</string>
    <string name="hint_old_password">Old password</string>
    <string name="edit_username">Edit username</string>
    <string name="edit_password">Edit password</string>
    <string name="info_password_changed">Password successfuly changed</string>
    <string name="info_username_changed">Username successfuly changed</string>
    <string name="error_old_password_not_matching">The old password does not correspond</string>
    <string name="error_old_same_new_password">The new password cannot be the same as a previous one</string>
    <string name="info_delete">Delete</string>
    <string name="info_delete_music">Delete music</string>
    <string name="info_confirm_delete_music">Are you sure you want to delete this music :</string>
    <string name="info_error_deleting">An error occurred while trying to remove this music</string>
</resources>