<?xml version="1.0" encoding="utf-8"?>
<!-- res/layout/drawer_header.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="?attr/colorPrimary"
    android:gravity="bottom"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingBottom="16dp">
        <TextView
            android:id="@+id/header_title"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"/>

        <ImageButton
            android:id="@+id/button_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/action_settings"
            android:padding="8dp"
            android:src="@drawable/ic_settings"
            app:tint="@android:color/white"/>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_code"
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        app:endIconDrawable="@drawable/ic_search"
        app:endIconTint="@color/black"
        app:endIconMode="custom"
        app:boxBackgroundMode="filled"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:boxCornerRadiusTopStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusBottomEnd="12dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="8"
            android:imeOptions="actionSearch"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>


</LinearLayout>
